--- a/CSS/home-apps.css
+++ b/CSS/home-apps.css
@@ -178,7 +178,7 @@ hr {
 
 /* DEUXIEME PARTIE YOUTUBE */
 .overlay-youtube {
-    width:26vw;
+    width:32vw;
     height: auto;
     border-radius: 20px;
     justify-content: flex-start;
@@ -256,9 +256,59 @@ hr {
     width: 120px;
     margin: 25px 20px;
 }
-
-
-
-
-
 /* TROISIEME PARTIE twitter */
+
+
+/* FOOTER */
+footer {
+    border: solid none;
+    background-color: rgb(17, 17, 17);
+    color: white;
+    padding: 7vw 3vw;
+    margin-top: 5vw;
+}
+
+footer a {
+    color: white;
+    transition: transform 0.3s ease; /* Ajout de transition pour un effet de survol fluide */
+}
+
+footer a:hover {
+    transform: scale(1.2);
+}
+
+
+footer p {
+    text-align: center;
+}
+
+
+
+.logos-footer {
+    display: flex;
+    align-items: center;
+    flex-grow: 1; /* Permet au conteneur .logos de prendre tout l'espace restant */
+    margin-left: 10vw;
+    margin-right: 10vw;
+}    
+
+.logos-footer img {
+    width: 5vw;
+    margin-right: 1vw;
+}    
+
+.logo-footer {
+    display: flex; /* Utilise Flexbox pour aligner le logo et le texte horizontalement */
+    align-items: center; /* Aligne verticalement le logo et le texte */
+    justify-self: space-between;
+    margin-right: 15vw;
+}       
+
+
+.button1 {
+    border: solid white;
+    padding: 1vw;
+    justify-content: center;
+}
+
+/* FOOTER */
