--- a/CSS/home-apps.css
+++ b/CSS/home-apps.css
@@ -17,7 +17,6 @@ body {
 a {
     text-decoration: none;
     color: black;
-
 }    
 
 nav {
@@ -26,7 +25,6 @@ nav {
     background-color: white;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
     border-radius: 30px;
-    position: 
     width: 90vw;
     margin: 20px;
     padding: 1vw;
@@ -125,6 +123,14 @@ hr {
 
 .twitter-color {
     font-weight: 800;
+}
+
+.anim-button {
+    transition: transform 0.3s ease;
+}
+
+.anim-button:hover {
+    transform: scale(1.2);
 }
 
 
