--- a/CSS/spotify.css
+++ b/CSS/spotify.css
@@ -26,8 +26,8 @@ nav {
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
     border-radius: 30px;
     width: 90vw;
-    margin: 20px;
     padding: 1vw;
+    margin: 20px auto;
 }    
 
 nav a {
@@ -104,7 +104,7 @@ h3 {
     margin: 10px 25px;
     font-family: circular;
     color: #1CC658;
-}
+        }
 
 p {
     margin: 25px 40px;
