--- a/CSS/spotify.css
+++ b/CSS/spotify.css
@@ -77,13 +77,6 @@ transform: scale(1.2);
 
 
 
-
-
-
-
-
-
-
 /* MAIN */
 main {
     padding-top: 2vw;
@@ -112,7 +105,7 @@ p {
 }
 
 hr {
-    width: 70vw;
+    width: 60vw;
     text-align: center;
     margin: 6vw auto;
 }
@@ -158,14 +151,18 @@ hr {
 
 
 
-
-
-
-
-
-
-
 /* PREMIERE PARTIE SPOTIFY */
+
+
+
+
+
+.slogan {
+    color: #1CC658;
+    text-align: center;
+    margin: 35px 10px;
+
+}
 
 .overlay-spotify {
     width:18vw;
@@ -185,7 +182,7 @@ hr {
     background-color: rgb(66, 66, 66);
     padding: 25px;
     border-radius: 20px;
-    margin: 20px 30px;
+    margin: 3vw 7vw;
 }
 
 .title-spotify {
@@ -194,13 +191,20 @@ hr {
     justify-content: space-between;
 }
 
-.right-spotify {
-    margin: 3vw 8vw;
-}
-
 .logos-from-blocs {
     width: 120px;
     margin: 25px 20px;
+}
+
+
+
+.column1 {
+    border: solid none;
+    color: #1CC658;
+    display: block;
+    text-align: center;
+    font-size: 20px;
+    margin: 3vw 6vw ;
 }
 
 
